--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameSite</title>
 
-    <!-- Bloodstrap -->
+    <!-- Boodstrap -->
     <link 
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
             rel="stylesheet" 
@@ -27,10 +27,29 @@
       </head>
 </head>
 <body>
-   
-  
 
-    <!-- Bloodstreap JS -->
+   <div class="container-xl p-0">
+
+      <nav class="navbar navbar-expand-lg menu-bg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src='/img/logo.svg' alt=""></a>
+          <button class="navbar-toggler menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Переключатель навигации">
+            <span class="navbar-toggler-icon"></span>           
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+            <div class="navbar-nav navigation">
+              <a class="nav-link text-white fs-5" href="#">Dota 2</a>
+              <a class="nav-link text-white fs-5 mr-4" href="#">Fortnite</a>
+              <a class="nav-link text-white fs-5" href="#">GTA 5</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+   </div>
+
+    <!-- Boodstreap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
                 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
                 crossorigin="anonymous"></script>
