--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
     <!-- Animate.css -->
 
-    <head>
         <link
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -48,6 +47,43 @@
       </nav>
 
    </div>
+
+   <main>
+    <section class="main-content">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xxl-7 col-xl-6 col-lg-6 col-md-12">
+            <div class="hero-section pb-5" >
+              <h1 class="hero-title text-white m-0">Удивительный мир <br> компьютерных игр</h1>
+              
+              <p class="hero-desc text-white my-5">
+                Познакомтесь с самыми популярными среди <br>
+                геймеров онлайн-играми. Узнайте, что нового <br>
+                происходит в виртуальном мире.
+              </p>
+
+              <a href="/" class="btn btn-purple text-white">Узнать больше</a>
+            </div>
+          </div>
+          <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-12">
+            <div class="card-game d-flex flex-column">
+              <div class="first-card-row d-flex justify-content-between">
+                <div class="gta-img">
+                  <img src="./img/gta.png" alt="">
+                </div>
+                <div class="fortnite-img">
+                  <img src="./img/fort.png" alt="">
+                </div>
+                <div class="dota-img mt-4">
+                  <img src="./img/dota.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+   </main>
 
     <!-- Boodstreap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
