--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav navigation">
               <a class="nav-link text-white fs-5" href="#">Dota 2</a>
-              <a class="nav-link text-white fs-5 mr-4" href="#">Fortnite</a>
+              <a class="nav-link text-white fs-5 mx-4" href="#">Fortnite</a>
               <a class="nav-link text-white fs-5" href="#">GTA 5</a>
             </div>
           </div>
@@ -49,8 +49,8 @@
    </div>
 
    <main>
-    <section class="main-content">
-      <div class="container-fluid">
+    <section class="main-content pt-5">
+      <div class="container">
         <div class="row">
           <div class="col-xxl-7 col-xl-6 col-lg-6 col-md-12">
             <div class="hero-section pb-5" >
@@ -74,9 +74,9 @@
                 <div class="fortnite-img">
                   <img src="./img/fort.png" alt="">
                 </div>
-                <div class="dota-img mt-4">
-                  <img src="./img/dota.png" alt="">
-                </div>
+              </div>
+              <div class="dota-img mt-4">
+                <img src="./img/dota.png" alt="">
               </div>
             </div>
           </div>
