--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
       <nav class="navbar navbar-expand-lg menu-bg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src='/img/logo.svg' alt=""></a>
+          <a class="navbar-brand" href="#">
+            <img class="logo" src='./img/logo.svg' alt="" width="86" height="86">
+          </a>
           <button class="navbar-toggler menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>           
@@ -84,6 +86,14 @@
       </div>
     </section>
    </main>
+
+   <footer>
+    <div class="footer-contenr container d-flex justify-content-center mt-5 pb-4">
+      <a href="" class="text-white footer-link">Телеграм</a>
+      <a href="" class="text-white footer-link">ВКонтакте</a>
+      <a href="" class="text-white footer-link">Инстаграмм</a>
+    </div>
+   </footer>
 
     <!-- Boodstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
