--- a/html/pages/gta.html
+++ b/html/pages/gta.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
-    <!-- Blootstrap CSS-->
+    <title>GTA V</title>
+    <!-- Swiper CSS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+    <!-- Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Свой файл стилей-->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body> 
@@ -19,36 +23,13 @@
         </div>
       </nav>
     </div>
-    <main>
-      <section class="main-content pt-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-xxl-7 col-xl-6 col-lg-6 col-md-12">
-              <!-- Колонка для блока с текстом-->
-              <div class="hero-section pb-5">
-                <h1 class="hero-title text-white m-0">Удивительный мир <br> компьютерных игр</h1>
-                <p class="hero-desc text-white my-5">Познакомьтесь с самыми популярными среди<br> геймеров онлайн-играми. Узнайте, что нового <br> происходит в виртуальном мире.</p><a class="btn btn-purple text-white" href="">Узнать больше</a>
-              </div>
-            </div>
-            <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-12">
-              <!-- Колонка для карточек с играми-->
-              <div class="card-games d-flex flex-column">
-                <div class="first-card-row d-flex justify-content-between">
-                  <div class="gta-img"><img src="./img/gta.png" alt=""></div>
-                  <div class="fortnite-img"><img src="./img/fort.png" alt=""></div>
-                </div>
-                <div class="dota-img mt-4"><img src="./img/dota.png" alt=""></div>
-              </div>
-              <!-- // Колонка для карточек с играми-->
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
     <footer>
       <div class="footer-contenr container d-flex justify-content-center mt-5 pb-4"><a class="text-white footer-link" href="">Телеграмм</a><a class="text-white footer-link" href="">ВКонтакте</a><a class="text-white footer-link" href="">Discord</a></div>
     </footer>
-    <!-- Blootstrap CSS-->
+    <!-- Swiper JS-->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!-- Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="/../../js/swiper-slider.js"></script>
   </body>
 </html>
