--- a/dota.html
+++ b/dota.html
@@ -15,7 +15,7 @@
   <body> 
     <div class="container-xl p-0">
       <nav class="navbar navbar-expand-lg menu-bg">
-        <div class="container-fluid"><a class="navbar-brand" href="#"><img class="logo" src="./img/logo.svg" alt="" width="86" height="86"></a>
+        <div class="container-fluid"><a class="navbar-brand" href="index.html"><img class="logo" src="./img/logo.svg" alt="" width="86" height="86"></a>
           <button class="navbar-toggler menu-btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Переключатель навигации"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav navigation"><a class="nav-link text-white fs-5" href="dota.html">Dota 2</a><a class="nav-link text-white fs-5 mx-4" href="fortnite.html">Fortnite</a><a class="nav-link text-white fs-5" href="gta.html">GTA 5</a></div>
@@ -69,7 +69,7 @@
                   <div class="card-body"><img class="card-img-top mb-4" src="./img/pic/articles/dota-article-1.png" alt="...">
                     <h5 class="card-title">
                        Рецензия на Dota: <br>Dragonʼs Blood. </h5>
-                    <p class="card-text">Каким получился мультсериал по Dota 2 <br>от авторов «Легенды о Корре» </p><a class="btn btn-primary" href="#">Читать</a>
+                    <p class="card-text">Каким получился мультсериал по Dota 2 <br>от авторов «Легенды о Корре» </p><a class="btn btn-purple btn-primary" href="#">Читать</a>
                   </div>
                 </div>
               </div>
@@ -77,7 +77,7 @@
                 <div class="card">
                   <div class="card-body"><img class="card-img-top mb-4" src="./img/pic/articles/dota-article-2.png" alt="...">
                     <h5 class="card-title">Valve снизила стоимость <br>подписки Dota Plus</h5>
-                    <p class="card-text">Valve снизила стоимость <br>подписки Dota Plus для россиян почти в два раза </p><a class="btn btn-primary" href="#">Читать</a>
+                    <p class="card-text">Valve снизила стоимость <br>подписки Dota Plus для россиян почти в два раза </p><a class="btn btn-purple btn-primary" href="#">Читать</a>
                   </div>
                 </div>
               </div>
@@ -85,7 +85,7 @@
                 <div class="card">
                   <div class="card-body"><img class="card-img-top mb-4" src="./img/pic/articles/dota-article-3.png" alt="...">
                     <h5 class="card-title">В Steam был<br>зафиксирован рекорд</h5>
-                    <p class="card-text">В Steam был зафиксирован рекорд по<br>одновременному количеству игроков</p><a class="btn btn-primary" href="#">Читать</a>
+                    <p class="card-text">В Steam был зафиксирован рекорд по<br>одновременному количеству игроков</p><a class="btn btn-purple btn-primary" href="#">Читать</a>
                   </div>
                 </div>
               </div>
